# protobuf_edit

./: Cargo.toml  README.md  rustfmt.toml
demos/protobuf_decoder_web/: Cargo.toml  README.md  Trunk.toml  index.html
demos/protobuf_decoder_web/.cargo/: config.toml
demos/protobuf_decoder_web/scripts/: minify_dist.sh
demos/protobuf_decoder_web/src/: app.rs  bytes.rs  decode.rs  envelope.rs  error.rs  fx.rs  hex_copy.rs  hex_view.rs  idb.rs  lib.rs  messages.rs  page_cache.rs  state.rs  toast.rs  web.rs  workspace.rs
demos/protobuf_decoder_web/src/components/: breadcrumb.rs  envelope_frames.rs  field_tree.rs  hex_context_menu.rs  inspector.rs  message_sidebar.rs  mod.rs  status_bar.rs  theme_switcher.rs
demos/protobuf_decoder_web/src/messages/: model.rs  prefs.rs  service.rs
demos/protobuf_decoder_web/src/services/: envelope.rs  export.rs  message.rs  mod.rs  workspace.rs
demos/protobuf_decoder_web/src/workspace/: commands.rs  drilldown.rs  field_paths.rs  frame_name.rs  highlight.rs  session.rs  tree.rs
demos/protobuf_decoder_web/style/: controls.css  hex.css  layout.css  reset.css  sidebar.css  status.css  structure.css  theme_switcher.css  toast.css  tokens.css
demos/protobuf_decoder_web/tools/minify_dist/: minify_dist.mjs  package-lock.json  package.json
src/: _macro.rs  buf.rs  data_structures.rs  document.rs  error.rs  fx.rs  lib.rs  patch.rs  stream.rs  varint.rs  wire.rs
src/data_structures/: buf.rs
src/document/: codec.rs  field_mut.rs  field_ref.rs  guard.rs  helpers.rs  planned.rs  repeated.rs  tests.rs  types.rs
src/patch/: access.rs  edit.rs  ids.rs  model.rs  parse.rs  query.rs  save.rs  spans.rs  tests.rs  txn.rs
src/stream/: decode.rs  group.rs  handler.rs  parser.rs  state.rs  tests.rs  trie.rs
src/varint/: sealed.rs  tests.rs  zigzag.rs
src/wire/: codec.rs  group.rs  tag.rs
